Changelog
=========

2019.5.1 (unreleased)
---------------------

- Implement @role-inheritance serivce endpoint for workspace folders. [deiferni]
- Include permissions.zcml of Products.CMFEditions. [lgraf]
- Add action to create new invitations to workspaces. [deiferni]
- Return creator of workspace in GET, make sure he is a WorkspaceAdministrator upon workspace creation. Get rid of WorkspaceOwner role. [deiferni]
- Allow invitations to external users through E-mails. [njohner]
- Update invitation and participation GET json response format. [deiferni]
- Fix to reassign a task to a new inbox group. [elioschmutz]
- Always use API for OfficeConnector. [njohner]
- Refactor solrsearch and listing endpoints. [njohner]
- Add tests for solrsearch and listing endpoints. [njohner]
- Split invitations from participations endpoints. [njohner]
- Make and enforce unicode for webaction owner and groups. [njohner]
- Implement testing against a real Solr. [lgraf]
- Sharing on workspace folders should always show workspace users. [njohner]
- Replace @participations endpoint with @invitations endpoint accepting slightly different parameters. [deiferni]
- Update Solr to version 8.4.0. [buchi]


2019.5.0 (2019-12-10)
---------------------

- Bump ftw.solr to 2.8.0 to get support for uploading blobs. [lgraf]
- Add custom IWarmupPerformer to also warm up GEVER's trashed index. [lgraf]


2019.5.0rc1 (2019-12-03)
------------------------

- Make Period a proper plone content type. Migrate old SQL base periods. [deiferni]
- Restrict available users in sharing on workspaces and workspace folders. [njohner]
- Correct styling bug fix in tabbedview after showing bumblebee tooltip. [njohner]


2019.4.2 (2019-11-29)
---------------------

- Register virtual host monster on site setup for testserver [bierik]
- Catch oneoffixx api calls failures and show statusmessage instead. [phgross]
- Fix setting agenda item description. [deiferni]